--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <script data-require="jquery" data-semver="2.1.4" src="https://code.jquery.com/jquery-2.1.4.js"></script>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/strophe.js/1.2.3/strophe.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/strophe.js/1.2.3/strophe.min.js'></script>
     <script src="script.js"></script>
     <div id="status"></div>
     <button id="connect">
